# itlab_recruit

./: README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: __init__.py  app.py  config.py  extensions.py  models.py  routes.py  schemas.py
docs/: factory.yaml  purchases.yaml  shop.yaml
factory_service/: Dockerfile  celerybeat-schedule.db  config.py  docs.yaml  entrypoint.sh  pyproject.toml  requirements.txt
factory_service/app/: __init__.py  config.py  models.py  routes.py  schemas.py  tasks.py  validation.py
factory_service/migrations/versions/: 689dcb6bd26b_init_table.py  f100c93d7ad3_.py
postman/: RTUITlab.postman_collection.json
purchases_service/: docs.yaml  entrypoint.sh  pyproject.toml  requirements.txt
purchases_service/app/: __init__.py  config.py  extensions.py  models.py  routes.py  schemas.py  validation.py
purchases_service/migrations/versions/: 9a51e8325b50_remove_shop_id_from_check.py  b188f5e8a8f4_init_table.py
purchases_service/tests/: conftest.py  test_purchases.py
shop_service/: docs.yaml  entrypoint.sh  pyproject.toml  requirements.txt
shop_service/app/: __init__.py  config.py  models.py  queue.py  routes.py  schemas.py  validation.py
shop_service/migrations/versions/: e0698f658756_init_table.py
shop_service/tests/: conftest.py  test_purchases.py
