[tool.poetry]
name = "shop_service"
version = "0.1.0"
description = ""
authors = ["Zaikin Valentin <zaikinvala59@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
